--- a/teaching.html
+++ b/teaching.html
@@ -22,7 +22,7 @@
 <div class="section">
   <p>Courses I am currently teaching:</p>
     <ul>
-      <li>I'm not currently teaching any units. 
+      <li>I'm teaching <a href="https://www.sydney.edu.au/units/COMP3027/2026-S1C-ND-CC">COMP3027</a> and <a href="https://www.sydney.edu.au/units/COMP3927/2026-S1C-ND-CC">COMP3927</a> in 2026, Semester 1. 
     </ul>
 
   <p> Previous courses:</p>
